--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-toastify": "^9.1.3",
+    "resend": "^1.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
