--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.10",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -24,6 +25,10 @@
     "react-toastify": "^9.1.3",
     "resend": "^1.1.0",
     "tailwindcss": "3.3.3",
+    "three": "^0.158.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.158.2"
   }
 }
