--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.2",
     "resend": "^1.1.0",
     "tailwindcss": "3.3.3",
     "three": "^0.158.0",
