--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.2",
