--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-hook-form": "^7.46.2",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.2",
-    "resend": "^1.1.0",
+    "resend": "^2.0.0-canary.0",
     "tailwindcss": "3.3.3",
     "three": "^0.158.0",
     "typescript": "5.2.2"
